--- a/Apps.Termbase.io/Apps.Termbase.io.csproj
+++ b/Apps.Termbase.io/Apps.Termbase.io.csproj
@@ -4,7 +4,7 @@
         <TargetFramework>net8.0</TargetFramework>
         <ImplicitUsings>enable</ImplicitUsings>
         <Nullable>enable</Nullable>
-        <Product>Termbase.io</Product>
+        <Product>termbase.io</Product>
         <Description>termbase.io is a fully featured translation solution for enterprises and LSPs, with the focus on leveraging AI and corporate language to produce best quality and human verified results.</Description>
         <Version>1.0.0</Version>
         <PackageId>Apps.Termbase.io</PackageId>
