--- a/Apps.Termbase.io/Apps.Termbase.io.csproj
+++ b/Apps.Termbase.io/Apps.Termbase.io.csproj
@@ -22,4 +22,11 @@
       </PackageReference>
     </ItemGroup>
 
+    <ItemGroup>
+      <None Remove="image\icon.png" />
+      <EmbeddedResource Include="image\icon.png">
+        <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      </EmbeddedResource>
+    </ItemGroup>
+
 </Project>
